// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the pressed IconAIFixesButton matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93,35,122,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c0:hover {
  border-color: #fff;
}

.c0:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

<button
  aria-label="Fix with AI"
  aria-pressed={true}
  className="c0 yoast-tooltip yoast-tooltip-w"
  disabled={false}
  id="keyphraseInIntroductionAIFixes"
  onClick={[Function]}
  type="button"
/>
`;

exports[`the unpressed IconAIFixesButton matches the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: 1px solid #ccc;
  background-color: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 24px;
}

.c0:hover {
  border-color: #fff;
}

.c0:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

<button
  aria-label="Fix with AI"
  aria-pressed={false}
  className="c0 yoast-tooltip yoast-tooltip-w"
  disabled={false}
  id="keyphraseDensityAIFixes"
  onClick={[Function]}
  type="button"
/>
`;
